added breakpoint observable, grid list

--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -1,1 +1,56 @@
-<p>students works!</p>
+<div class="grid-container">
+
+  <mat-grid-list [cols]="cols" [rowHeight]="rowHeight">
+    <mat-grid-tile>
+      <div class="box-1">
+        <span>Anzeigen nach:</span>
+        <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+          <mat-button-toggle [checked]="true" (click)="showLocation = true">ORT</mat-button-toggle>
+          <mat-button-toggle (click)="showLocation = false">LERNJAHR</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+      <div class="box-2">
+        <span>Schüler hinzufügen:</span>
+        <button mat-raised-button color="primary" routerLink="/students/add">
+          <mat-icon aria-label="edit_icon">add</mat-icon>
+          NEU
+        </button>
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+  <div *ngIf="showLocation; else showLearnigYear">
+    <p>Behamberg</p>
+    <p>Haiho</p>
+    <p>Ernsthofen</p>
+  </div>
+
+  <ng-template #showLearnigYear>
+    <p>1. Lernjahr</p>
+    <p>2. Lernjahr</p>
+    <p>3. Lernjahr</p>
+  </ng-template>
+
+  <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let student of students" cdkDragLockAxis="y" cdkDrag>
+
+      <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
+
+      {{student}}
+      <div class="icon-container">
+        <a mat-button color="accent" routerLink="/students/view/:studentName">
+          <mat-icon aria-label="edit_icon">visibility</mat-icon>
+        </a>
+        <a mat-button color="primary" routerLink="/students/edit/:studentName">
+          <mat-icon aria-label="edit_icon">edit</mat-icon>
+        </a>
+        <button mat-button color="warn">
+          <mat-icon aria-label="delete_icon">delete</mat-icon>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
