--- a/src/app/components/students/students.component.css
+++ b/src/app/components/students/students.component.css
@@ -1,1 +1,135 @@
-/*# sourceMappingURL=students.component.css.map */
+.grid-container {
+  margin: 20px;
+}
+
+.mat-grid-tile {
+  /*   background-color: rgba(255, 0, 0, 0.305);
+  border: 3px solid black; */
+}
+
+.box-1,
+.box-2 {
+  position: absolute;
+  top: 5px;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  text-align: center;
+}
+.box-1 span,
+.box-2 span {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0;
+}
+.box-1 .mat-button-toggle-group,
+.box-2 .mat-button-toggle-group {
+  border: none;
+  width: 100%;
+}
+.box-1 button,
+.box-1 .mat-button-toggle,
+.box-2 button,
+.box-2 .mat-button-toggle {
+  margin: 5px 0;
+  width: 100%;
+}
+
+.mat-button-toggle {
+  background-color: #3f51b5;
+  color: white;
+}
+
+.mat-button-toggle-checked {
+  background-color: #e91e63;
+  color: white;
+}
+
+.example-list {
+  max-width: 100%;
+  border: solid 1px #ccc;
+  min-height: 60px;
+  display: block;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.example-box {
+  padding: 10px;
+  border-bottom: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  background: white;
+  font-size: 14px;
+  text-align: center;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.icon-container {
+  display: block;
+}
+.icon-container .mat-button {
+  min-width: 50px;
+  padding: 5px 20px;
+}
+
+@media screen and (min-width: 960px) {
+  .box-1,
+.box-2 {
+    flex-direction: row;
+    width: auto;
+    align-items: center;
+  }
+  .box-1 button,
+.box-2 button {
+    width: auto;
+  }
+  .box-1 {
+    left: 5px;
+    align-items: center;
+  }
+  .box-1 span {
+    width: 100%;
+  }
+  .box-1 .mat-button-toggle-group {
+    margin: 0 15px;
+  }
+  .box-2 {
+    right: 5px;
+  }
+  .box-2 button {
+    margin: 5px 15px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .grid-container {
+    margin: 10px 80px;
+  }
+}/*# sourceMappingURL=students.component.css.map */
