--- a/src/app/components/students/students.component.scss
+++ b/src/app/components/students/students.component.scss
@@ -46,7 +46,6 @@
   max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
-  display: block;
   background: white;
   border-radius: 4px;
   overflow: hidden;
@@ -57,7 +56,6 @@
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
@@ -90,30 +88,16 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.icon-container {
-  display: block;
-  .mat-button {
-    min-width: 50px;
-    padding: 5px 20px;
-  }
-}
-
 @media screen and (min-width: 960px) {
   .box-1,
   .box-2 {
     flex-direction: row;
-    width: auto;
-    align-items: center;
-    button {
-      width: auto;
-    }
   }
 
   .box-1 {
-    left: 5px;
-    align-items: center;
+    left: 0px;
     span {
-      width: 100%;
+      flex: 1 0 auto;
     }
     .mat-button-toggle-group {
       margin: 0 15px;
@@ -121,15 +105,18 @@
   }
 
   .box-2 {
-    right: 5px;
+    right: 0px;
+    justify-content: flex-end;
     button {
-      margin: 5px 15px;
+      width: auto;
+      margin-top: 5px;
+      margin-left: 15px;
     }
   }
 }
 
 @media screen and (min-width: 1280px) {
   .grid-container {
-    margin: 10px 80px;
+    margin: 30px 80px;
   }
 }
