--- a/src/app/components/students/students.component.css
+++ b/src/app/components/students/students.component.css
@@ -13,7 +13,7 @@
   top: 5px;
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
   text-align: center;
 }
 .box-1 span,
@@ -52,6 +52,7 @@
   background: white;
   border-radius: 4px;
   overflow: hidden;
+  margin-bottom: 20px;
 }
 
 .example-box {
@@ -90,6 +91,12 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 600px) and (max-width: 959.98px) {
+  .box-2 button {
+    margin: 0 auto;
+    width: 50%;
+  }
+}
 @media screen and (min-width: 960px) {
   .box-1,
 .box-2 {
