--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -22,63 +22,11 @@
   </mat-grid-list>
 
   <div *ngIf="showLocation; else showLearnigYear">
-    <h3>Behamberg</h3>
-    <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let student of dataSource | filter: 'Behamberg'" cdkDragLockAxis="y" cdkDrag>
-        <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
-        {{student.studentName}}
-        <a mat-button color="accent" routerLink="/students/view/:studentName">
-          <mat-icon aria-label="edit_icon">visibility</mat-icon>
-        </a>
-        <a mat-button color="primary" routerLink="/students/edit/:studentName">
-          <mat-icon aria-label="edit_icon">edit</mat-icon>
-        </a>
-        <button mat-button color="warn">
-          <mat-icon aria-label="delete_icon">delete</mat-icon>
-        </button>
-      </div>
-    </div>
-
-    <h3>Ernsthofen</h3>
-    <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let student of dataSource | filter: 'Ernsthofen'" cdkDragLockAxis="y" cdkDrag>
-        <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
-        {{student.studentName}}
-        <a mat-button color="accent" routerLink="/students/view/:studentName">
-          <mat-icon aria-label="edit_icon">visibility</mat-icon>
-        </a>
-        <a mat-button color="primary" routerLink="/students/edit/:studentName">
-          <mat-icon aria-label="edit_icon">edit</mat-icon>
-        </a>
-        <button mat-button color="warn">
-          <mat-icon aria-label="delete_icon">delete</mat-icon>
-        </button>
-      </div>
-    </div>
-
-    <h3>Haidershofen</h3>
-    <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let student of dataSource | filter: 'Haidershofen'" cdkDragLockAxis="y" cdkDrag>
-        <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
-        {{student.studentName}}
-        <a mat-button color="accent" routerLink="/students/view/:studentName">
-          <mat-icon aria-label="edit_icon">visibility</mat-icon>
-        </a>
-        <a mat-button color="primary" routerLink="/students/edit/:studentName">
-          <mat-icon aria-label="edit_icon">edit</mat-icon>
-        </a>
-        <button mat-button color="warn">
-          <mat-icon aria-label="delete_icon">delete</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <ng-template #showLearnigYear>
-    <div *ngFor="let year of learningYear">
-      <h3>{{year}}</h3>
+    <article *ngFor="let location of locations">
+      <h3>{{ location }}</h3>
       <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let student of dataSource" cdkDragLockAxis="y" cdkDrag>
+        <div class="example-box" *ngFor="let student of dataSource | filterLocation: location" cdkDragLockAxis="y"
+          cdkDrag>
           <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
           {{student.studentName}}
           <a mat-button color="accent" routerLink="/students/view/:studentName">
@@ -92,7 +40,27 @@
           </button>
         </div>
       </div>
-    </div>
-  </ng-template>
+    </article>
+  </div>
 
+  <ng-template #showLearnigYear>
+    <article *ngFor="let year of learningYear">
+      <h3>{{ year }}</h3>
+      <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let student of dataSource | filterYear: year" cdkDragLockAxis="y" cdkDrag>
+          <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
+          {{student.studentName}}
+          <a mat-button color="accent" routerLink="/students/view/:studentName">
+            <mat-icon aria-label="edit_icon">visibility</mat-icon>
+          </a>
+          <a mat-button color="primary" routerLink="/students/edit/:studentName">
+            <mat-icon aria-label="edit_icon">edit</mat-icon>
+          </a>
+          <button mat-button color="warn">
+            <mat-icon aria-label="delete_icon">delete</mat-icon>
+          </button>
+        </div>
+      </div>
+    </article>
+  </ng-template>
 </div>
