table location responsive

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -28,8 +28,12 @@
       </div>
 
     </mat-toolbar>
-    <!-- Add Content Here -->
-    <router-outlet></router-outlet>
+    <!-- Add Content Here --> <!-- with noch ändern bei tabled -->
+    <div class="grid-container">
+      <router-outlet>
+      </router-outlet>
+    </div>
+
   </mat-sidenav-content>
 
 </mat-sidenav-container>
