--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,3 +1,7 @@
+.grid-container {
+  margin: 20px;
+}
+
 .sidenav-container {
   height: 100%;
 }
@@ -26,4 +30,10 @@
 
 a {
   cursor: pointer;
+}
+
+@media screen and (min-width: 1280px) {
+  .grid-container {
+    margin: 20px 50px;
+  }
 }/*# sourceMappingURL=sidebar.component.css.map */
