--- a/src/app/components/students/students.component.scss
+++ b/src/app/components/students/students.component.scss
@@ -1,7 +1,3 @@
-.grid-container {
-  margin: 20px;
-}
-
 .mat-grid-tile {
   /*   background-color: rgba(255, 0, 0, 0.305);
   border: 3px solid black; */
@@ -40,6 +36,11 @@
 .mat-button-toggle-checked {
   background-color: #e91e63;
   color: white;
+}
+
+.example-container {
+  width: 100%;
+  display: inline-block;
 }
 
 .example-list {
@@ -123,10 +124,20 @@
       margin-left: 15px;
     }
   }
+
+  .table-flex-container {
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+  }
+  .example-container {
+    margin-top: 20px;
+    width: 300px;
+  }
 }
 
-@media screen and (min-width: 1280px) {
-  .grid-container {
-    margin: 30px 80px;
+@media screen and (min-width: 1400px) {
+  .example-container {
+    width: 400px;
   }
 }
