dark theme toggle, global styles

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span routerLink="/students">
-        <a>Student-Management-App</a>
+        <a>Student Management App </a>
       </span>
       <span class="spacer"></span>
       <div [class.hidden]="isHandset$ |async">
@@ -26,9 +26,10 @@
         <a mat-button routerLink="/to-dos" routerLinkActive="active-link">Meine to do's</a>
         <a mat-button routerLink="/my-profile" routerLinkActive="active-link">Mein Profil</a>
       </div>
-
+      <mat-slide-toggle [formControl]="toggleControl"></mat-slide-toggle>
     </mat-toolbar>
-    <!-- Add Content Here --> <!-- with noch ändern bei tabled -->
+    <!-- Add Content Here -->
+    <!-- with noch ändern bei tabled -->
     <div class="grid-container">
       <router-outlet>
       </router-outlet>
