--- a/src/app/components/students/students.component.css
+++ b/src/app/components/students/students.component.css
@@ -33,7 +33,7 @@
 
 .mat-button-toggle {
   background-color: #3f51b5;
-  color: white;
+  color: white !important;
 }
 
 .mat-button-toggle-checked {
