--- a/src/app/components/students/students.component.scss
+++ b/src/app/components/students/students.component.scss
@@ -30,7 +30,7 @@
 
 .mat-button-toggle {
   background-color: #3f51b5;
-  color: white;
+  color: white !important;
 }
 
 .mat-button-toggle-checked {
