--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
 @use "@angular/material" as mat;
+@include mat.core();
 
 $my-primary: mat.define-palette(mat.$indigo-palette, 500);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
 // The "warn" palette is optional and defaults to red if not specified.
 $my-warn: mat.define-palette(mat.$red-palette);
+
+$my-theme-light: mat.define-light-theme(
+  (
+    color: (
+      primary: $my-primary,
+      accent: $my-accent,
+      warn: $my-warn,
+    ),
+  )
+);
+
+$my-theme-dark: mat.define-dark-theme(
+  (
+    color: (
+      primary: $my-primary,
+      accent: $my-accent,
+      warn: $my-warn,
+    ),
+  )
+);
+
+.theme-dark {
+  @include mat.all-component-colors($my-theme-dark);
+}
+
+.theme-light {
+  @include mat.all-component-colors($my-theme-light);
+}
 
 html,
 body {
@@ -14,16 +44,3 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
-.text-primary {
-  color: mat.get-color-from-palette($my-primary, "default");
-}
-
-.text-accent {
-  color: mat.get-color-from-palette($my-accent, "default");
-}
-
-.text-warn {
-  color: mat.get-color-from-palette($my-warn, "default");
-}
-
