--- a/src/app/components/students/add-student/add-student.component.html
+++ b/src/app/components/students/add-student/add-student.component.html
@@ -1,3 +1,4 @@
+<!-- Add Contact Form -->
 <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
@@ -75,13 +76,15 @@
           <p class="file-name">{{selectedFile?.name}}</p>
           <button type="button" mat-button color="accent">
             <mat-icon class="margin-r">cloud_upload</mat-icon>
-            <span>Upload</span>
+            <span>Hochladen</span>
           </button>
         </div>
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Hinzufügen</button>
+      <a mat-stroked-button color="primary" type="button" routerLink="">Zurück</a>
+      <button mat-stroked-button color="warn" type="reset">Eingabe löschen</button>
+      <button mat-raised-button color="primary" type="submit">Schüler hinzufügen</button>
     </mat-card-actions>
   </mat-card>
 </form>
