--- a/src/app/components/students/view-student/view-student.component.html
+++ b/src/app/components/students/view-student/view-student.component.html
@@ -1,1 +1,21 @@
-<p>view-student works!</p>
+<!-- Edit Contact Form -->
+<form>
+  <mat-card class="shipping-card">
+    <mat-card-header>
+      <mat-card-title>Schüler Details</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list role="list">
+        <mat-list-item role="listitem">Vorname: <span></span></mat-list-item>
+        <mat-list-item role="listitem">Nachname: <span></span></mat-list-item>
+        <mat-list-item role="listitem">Ort: <span></span></mat-list-item>
+        <mat-list-item role="listitem">Lernjahr: <span></span></mat-list-item>
+        <mat-list-item role="listitem">Notizen: <span></span></mat-list-item>
+        <mat-list-item role="listitem">PDF's:<span></span></mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <a mat-stroked-button color="primary" type="button" routerLink="">Zurück</a>
+    </mat-card-actions>
+  </mat-card>
+</form>
