--- a/src/app/components/students/view-student/view-student.component.html
+++ b/src/app/components/students/view-student/view-student.component.html
@@ -6,11 +6,10 @@
     </mat-card-header>
     <mat-card-content>
       <mat-list role="list">
-        <mat-list-item role="listitem">Vorname: <span></span></mat-list-item>
-        <mat-list-item role="listitem">Nachname: <span></span></mat-list-item>
-        <mat-list-item role="listitem">Ort: <span></span></mat-list-item>
-        <mat-list-item role="listitem">Lernjahr: <span></span></mat-list-item>
-        <mat-list-item role="listitem">Notizen: <span></span></mat-list-item>
+        <mat-list-item role="listitem">Name: {{student.studentName}} <span></span></mat-list-item>
+        <mat-list-item role="listitem">Ort: {{student.studentLocation}}<span></span></mat-list-item>
+        <mat-list-item role="listitem">Lernjahr: {{student.learningYear}} <span></span></mat-list-item>
+        <mat-list-item role="listitem">Notizen: {{student.studentNotes}}<span></span></mat-list-item>
         <mat-list-item role="listitem">PDF's:<span></span></mat-list-item>
       </mat-list>
     </mat-card-content>
