--- a/src/app/components/students/add-student/add-student.component.html
+++ b/src/app/components/students/add-student/add-student.component.html
@@ -1,5 +1,5 @@
-<!-- Add Contact Form -->
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+<!-- Edit Contact Form -->
+<form [formGroup]="studentForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Schüler hinzufügen</mat-card-title>
@@ -9,8 +9,8 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Vorname" formControlName="firstName">
-            <mat-error *ngIf="addressForm.controls['firstName'].hasError('required')">
+            <input matInput formControlName="name" placeholder="Name">
+            <mat-error *ngIf="studentForm.controls['name'].hasError('required')">
               Vorname ist <strong>erforderlich</strong>
             </mat-error>
           </mat-form-field>
@@ -20,19 +20,8 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Nachname" formControlName="lastName">
-            <mat-error *ngIf="addressForm.controls['lastName'].hasError('required')">
-              Nachname ist <strong>erforderlich</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Ort" formControlName="city">
-            <mat-error *ngIf="addressForm.controls['city'].hasError('required')">
+            <input matInput formControlName="city" placeholder="Ort">
+            <mat-error *ngIf="studentForm.controls['city'].hasError('required')">
               Ort ist <strong>erforderlich</strong>
             </mat-error>
           </mat-form-field>
@@ -48,7 +37,7 @@
                 {{year.learningYear}}
               </mat-option>
             </mat-select>
-            <mat-error *ngIf="addressForm.controls['year'].hasError('required')">
+            <mat-error *ngIf="studentForm.controls['year'].hasError('required')">
               Lernjahr ist <strong>erforderlich</strong>
             </mat-error>
           </mat-form-field>
@@ -59,7 +48,8 @@
         <div class="col">
           <mat-form-field appearance="fill" class="full-width">
             <mat-label>Notizen</mat-label>
-            <textarea matInput></textarea>
+            <textarea matInput formControlName="notes">
+            </textarea>
           </mat-form-field>
         </div>
       </div>
@@ -84,7 +74,8 @@
     <mat-card-actions>
       <a mat-stroked-button color="primary" type="button" routerLink="">Zurück</a>
       <button mat-stroked-button color="warn" type="reset">Eingabe löschen</button>
-      <button mat-raised-button color="primary" type="submit">Schüler hinzufügen</button>
+      <button mat-raised-button color="primary" type="submit" value="Update"
+        [disabled]="!studentForm.valid">Speichern</button>
     </mat-card-actions>
   </mat-card>
 </form>
