--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -32,7 +32,7 @@
           <a mat-button color="accent" routerLink="view/{{student.studentName}}" routerLinkActive="active">
             <mat-icon aria-label="edit_icon">visibility</mat-icon>
           </a>
-          <a mat-button color="primary" routerLink="/students/edit/:studentName">
+          <a mat-button color="primary" routerLink="edit/{{student.studentName}}">
             <mat-icon aria-label="edit_icon">edit</mat-icon>
           </a>
           <button mat-button color="warn">
