--- a/src/app/components/students/edit-student/edit-student.component.html
+++ b/src/app/components/students/edit-student/edit-student.component.html
@@ -19,8 +19,13 @@
 
       <div class="row">
         <div class="col">
-          <mat-form-field class="full-width">
-            <input matInput formControlName="city">
+          <mat-form-field appearance="fill" class="full-width">
+            <mat-label>Ort</mat-label>
+            <mat-select name="city" formControlName="city">
+              <mat-option *ngFor="let location of locations" [value]="location.cityName">
+                {{ location.cityName }}
+              </mat-option>
+            </mat-select>
             <mat-error *ngIf="studentForm.controls['city'].hasError('required')">
               Ort ist <strong>erforderlich</strong>
             </mat-error>
@@ -74,8 +79,8 @@
     <mat-card-actions>
       <a mat-stroked-button color="primary" type="button" routerLink="">Zurück</a>
       <button mat-stroked-button color="warn" type="reset">Eingabe löschen</button>
-      <button mat-raised-button color="primary" type="submit" value="Update"
-        [disabled]="!studentForm.valid">Änderungen Speichern</button>
+      <button mat-raised-button color="primary" type="submit" value="Update" [disabled]="!studentForm.valid">Änderungen
+        Speichern</button>
     </mat-card-actions>
   </mat-card>
 </form>
