--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -35,7 +35,7 @@
           <a mat-button color="primary" routerLink="edit/{{student.studentName}}">
             <mat-icon aria-label="edit_icon">edit</mat-icon>
           </a>
-          <button mat-button color="warn">
+          <button mat-button color="warn" (click)="onDeleteStudent(student.studentName)">
             <mat-icon aria-label="delete_icon">delete</mat-icon>
           </button>
         </div>
