--- a/src/app/components/students/edit-student/edit-student.component.html
+++ b/src/app/components/students/edit-student/edit-student.component.html
@@ -9,8 +9,8 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput formControlName="name">
-            <mat-error *ngIf="studentForm.controls['name'].hasError('required')">
+            <input matInput formControlName="studentName">
+            <mat-error *ngIf="studentForm.controls['studentName'].hasError('required')">
               Vorname ist <strong>erforderlich</strong>
             </mat-error>
           </mat-form-field>
@@ -21,12 +21,12 @@
         <div class="col">
           <mat-form-field appearance="fill" class="full-width">
             <mat-label>Ort</mat-label>
-            <mat-select name="city" formControlName="city">
+            <mat-select name="city" formControlName="studentLocation">
               <mat-option *ngFor="let location of locations" [value]="location.cityName">
                 {{ location.cityName }}
               </mat-option>
             </mat-select>
-            <mat-error *ngIf="studentForm.controls['city'].hasError('required')">
+            <mat-error *ngIf="studentForm.controls['studentLocation'].hasError('required')">
               Ort ist <strong>erforderlich</strong>
             </mat-error>
           </mat-form-field>
@@ -37,12 +37,12 @@
         <div class="col">
           <mat-form-field appearance="fill" class="full-width">
             <mat-label></mat-label>
-            <mat-select name="learningYear" formControlName="year">
+            <mat-select name="year" formControlName="learningYear">
               <mat-option *ngFor="let year of learningYear" [value]="year.learningYear">
                 {{year.learningYear}}
               </mat-option>
             </mat-select>
-            <mat-error *ngIf="studentForm.controls['year'].hasError('required')">
+            <mat-error *ngIf="studentForm.controls['learningYear'].hasError('required')">
               Lernjahr ist <strong>erforderlich</strong>
             </mat-error>
           </mat-form-field>
@@ -53,7 +53,7 @@
         <div class="col">
           <mat-form-field appearance="fill" class="full-width">
             <mat-label></mat-label>
-            <textarea matInput formControlName="notes">
+            <textarea matInput formControlName="studentNotes">
             </textarea>
           </mat-form-field>
         </div>
