--- a/src/app/components/students/add-student/add-student.component.html
+++ b/src/app/components/students/add-student/add-student.component.html
@@ -1,5 +1,5 @@
 <!-- Edit Contact Form -->
-<form [formGroup]="studentForm" novalidate (ngSubmit)="onSubmit()">
+<form [formGroup]="studentForm" novalidate (ngSubmit)="onCreateStudent()">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>Schüler hinzufügen</mat-card-title>
