--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -20,7 +20,11 @@
   </mat-grid-tile>
 </mat-grid-list>
 
-<div *ngIf="students.length > 0; else noDataAvailable">
+<ng-template *ngIf="students.length < 1 && !isFetching">
+  <p>Es wurden noch keine Schüler angelegt!</p>
+</ng-template>
+
+<div *ngIf="students.length >= 1 && !isFetching">
   <div *ngIf="showLocation">
     <article *ngFor="let location of locations" class="example-container">
       <h3>{{ location }}</h3>
@@ -29,13 +33,13 @@
           cdkDrag>
           <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
           {{student.studentName}}
-          <a mat-button color="accent" routerLink="view/{{student.studentName}}">
+          <a mat-button color="accent" routerLink="view/{{student.id}}">
             <mat-icon aria-label="edit_icon">visibility</mat-icon>
           </a>
           <a mat-button color="primary" routerLink="edit/{{student.studentName}}">
             <mat-icon aria-label="edit_icon">edit</mat-icon>
           </a>
-          <button mat-button color="warn" (click)="onDeleteStudent(student.studentName)">
+          <button mat-button color="warn" (click)="onDeleteStudent(student.studentName,student.id)">
             <mat-icon aria-label="delete_icon">delete</mat-icon>
           </button>
         </div>
@@ -56,7 +60,7 @@
           <a mat-button color="primary" routerLink="edit/{{student.studentName}}">
             <mat-icon aria-label="edit_icon">edit</mat-icon>
           </a>
-          <button mat-button color="warn" (click)="onDeleteStudent(student.studentName)">
+          <button mat-button color="warn" (click)="onDeleteStudent(student.studentName,student.id)">
             <mat-icon aria-label="delete_icon">delete</mat-icon>
           </button>
         </div>
@@ -65,9 +69,8 @@
   </div>
 </div>
 
-<ng-template #noDataAvailable>
-  <p>Es wurden noch keine Schüler angelegt!</p>
-</ng-template>
+<section *ngIf="isFetching">
+  <h2>Loading...</h2>
+</section>
 
-<button mat-raised-button color="primary" (click)="onFetchData()">FETCH STUDENTS</button>
-<button mat-raised-button color="warn" (click)="onSaveData()">STORE STUDENTS</button>
+<button mat-raised-button color="primary" (click)="onFetchStudents()">FETCH STUDENTS</button>
