--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -36,7 +36,7 @@
           <a mat-button color="accent" routerLink="view/{{student.id}}">
             <mat-icon aria-label="edit_icon">visibility</mat-icon>
           </a>
-          <a mat-button color="primary" routerLink="edit/{{student.studentName}}">
+          <a mat-button color="primary" routerLink="edit/{{student.id}}">
             <mat-icon aria-label="edit_icon">edit</mat-icon>
           </a>
           <button mat-button color="warn" (click)="onDeleteStudent(student.studentName,student.id)">
@@ -54,10 +54,10 @@
         <div class="example-box" *ngFor="let student of students | filterYear: year" cdkDragLockAxis="y" cdkDrag>
           <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
           {{student.studentName}}
-          <a mat-button color="accent" routerLink="view/{{student.studentName}}">
+          <a mat-button color="accent" routerLink="view/{{student.id}}">
             <mat-icon aria-label="edit_icon">visibility</mat-icon>
           </a>
-          <a mat-button color="primary" routerLink="edit/{{student.studentName}}">
+          <a mat-button color="primary" routerLink="edit/{{student.id}}">
             <mat-icon aria-label="edit_icon">edit</mat-icon>
           </a>
           <button mat-button color="warn" (click)="onDeleteStudent(student.studentName,student.id)">
