file upload works, fb-storage ; without styling

--- a/src/app/components/students/add-student/add-student.component.html
+++ b/src/app/components/students/add-student/add-student.component.html
@@ -84,3 +84,12 @@
     </mat-card-actions>
   </mat-card>
 </form>
+
+<div class="container" style="width:600px">
+  <div>
+    <app-upload-form></app-upload-form>
+  </div>
+  <div>
+    <app-upload-list></app-upload-list>
+  </div>
+</div>
