--- a/src/app/components/students/upload-details/upload-details.component.css
+++ b/src/app/components/students/upload-details/upload-details.component.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  a {
-    cursor: default;
-  }
+}
+.container a {
+  cursor: default;
 }
 
 .mr-5 {
@@ -14,4 +14,4 @@
 .ml-15 {
   margin-top: 3px;
   margin-left: 15px;
-}
+}/*# sourceMappingURL=upload-details.component.css.map */
