--- a/src/app/components/students/upload-form/upload-form.component.html
+++ b/src/app/components/students/upload-form/upload-form.component.html
@@ -10,8 +10,7 @@
   </button>
 
   <div *ngIf="currentFileUpload">
-    <div role="progressbar" attr.aria-valuenow="{{ percentage }}" aria-valuemin="0" aria-valuemax="100"
-      [ngStyle]="{ width: percentage + '%' }">
+    <div role="progressbar" attr.aria-valuenow="{{ percentage }}" aria-valuemin="0" aria-valuemax="100">
       {{ percentage }}%
     </div>
   </div>
