--- a/src/app/components/students/upload-list/upload-list.component.html
+++ b/src/app/components/students/upload-list/upload-list.component.html
@@ -1,37 +1,8 @@
-<div>
-  <h2>Übersicht Dateien</h2>
-  <ul *ngFor="let file of fileUploads">
-    <li>
+<div *ngIf="fileUploads.length > 0">
+  <mat-list>
+    <div mat-subheader>Übersicht Dateien</div>
+    <mat-list-item *ngFor="let file of fileUploads">
       <app-upload-details [fileUpload]='file'></app-upload-details>
-    </li>
-  </ul>
+    </mat-list-item>
+  </mat-list>
 </div>
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-  <!-- Position Column -->
-  <ng-container matColumnDef="demo-position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="demo-name">
-    <th mat-header-cell *matHeaderCellDef> File name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="demo-weight">
-    <th mat-header-cell *matHeaderCellDef> File size </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="demo-symbol">
-    <th mat-header-cell *matHeaderCellDef> Action </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
