--- a/src/app/components/students/upload-details/upload-details.component.html
+++ b/src/app/components/students/upload-details/upload-details.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <a href="{{ fileUpload.url }}">
+  <a href="{{ fileUpload.url }}" target="_blank">
     <mat-icon mat-list-icon class="mr-5" color="accent">insert_drive_file</mat-icon>
     {{ fileUpload.name }}
   </a>
