--- a/src/app/components/students/view-student/view-student.component.html
+++ b/src/app/components/students/view-student/view-student.component.html
@@ -10,7 +10,9 @@
         <mat-list-item role="listitem">Ort: {{student.studentLocation}}<span></span></mat-list-item>
         <mat-list-item role="listitem">Lernjahr: {{student.learningYear}} <span></span></mat-list-item>
         <mat-list-item role="listitem">Notizen: {{student.studentNotes}}<span></span></mat-list-item>
-        <mat-list-item role="listitem">PDF's:<span></span></mat-list-item>
+        <div>
+          <app-upload-list></app-upload-list>
+        </div>
       </mat-list>
     </mat-card-content>
     <mat-card-actions>
