--- a/src/app/components/students/edit-student/edit-student.component.html
+++ b/src/app/components/students/edit-student/edit-student.component.html
@@ -53,28 +53,12 @@
         <div class="col">
           <mat-form-field appearance="fill" class="full-width">
             <mat-label></mat-label>
-            <textarea matInput formControlName="studentNotes">
+            <textarea matInput formControlName="studentNotes" placeholder="Notizen">
             </textarea>
           </mat-form-field>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col">
-          <!-- <input type="file" (change)="onFileSelected($event)"> -->
-          <button type="button" mat-stroked-button (click)="fileInput.click()">Datei auswählen</button>
-          <input hidden (change)="onFileSelected($event)" #fileInput type="file">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <p class="file-name">{{selectedFile?.name}}</p>
-          <button type="button" mat-button color="accent">
-            <mat-icon class="margin-r">cloud_upload</mat-icon>
-            <span>Hochladen</span>
-          </button>
-        </div>
-      </div>
     </mat-card-content>
     <mat-card-actions>
       <a mat-stroked-button color="primary" type="button" routerLink="">Zurück</a>
